k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: simple-gis-new-web
    name: simple-gis-new-web-service
spec:
    type: LoadBalancer
    ports:
        -   name: simple-gis-new-web-port
            port: 8051
            protocol: TCP
            targetPort: 80
    selector:
        app: simple-gis-new-web
